NS 19 - Add ApiResult Dto

--- a/Angular/Nutrishare/src/app/modules/USDA/forms/search-form/search-form/search-form.component.html
+++ b/Angular/Nutrishare/src/app/modules/USDA/forms/search-form/search-form/search-form.component.html
@@ -13,7 +13,7 @@
             </div>
             <div >
                 <button mat-icon-button
-                        (click)="search(searchFormGroup.value)">
+                        (click)="search()">
                     <mat-icon>search</mat-icon>
                 </button>
             </div>
