NS 22 - Update architecture to leverage ComponentStore and remove instances of BehaviorSubject.

--- a/Angular/Nutrishare/src/app/modules/Nutrishare/components/nutrishare/nutrishare.component.html
+++ b/Angular/Nutrishare/src/app/modules/Nutrishare/components/nutrishare/nutrishare.component.html
@@ -2,7 +2,7 @@
     <app-navbar></app-navbar>
     <div fxLayout="row" fxLayoutAlign="end">
         <app-search-filter id="searchFilter"
-                        [hidden]="searchFilterToggle">
+                        [hidden]="toggleSearchFilter">
         </app-search-filter>
     </div>
 </div>
