--- a/Angular/Nutrishare/src/app/modules/USDA/forms/search-form/search-form/search-form.component.html
+++ b/Angular/Nutrishare/src/app/modules/USDA/forms/search-form/search-form/search-form.component.html
@@ -19,7 +19,7 @@
             </div>
             <div fxFlex="nogrow">
                 <button mat-icon-button
-                (click)="toggleSearchFilter()">
+                (click)="toggle()">
                 <mat-icon>filter_alt</mat-icon>
                 </button>
             </div>
